# oop_labs

laba1/: CMakeLists.txt  Dockerfile
laba1/include/: string_utils.h
laba1/src/: main.cpp  string_utils.cpp
laba1/test/: test_string_utils.cpp
laba2/: CMakeLists.txt  Dockerfile
laba2/include/: quinary_integer.h
laba2/src/: main.cpp  quinary_integer.cpp
laba2/test/: test_quinary_integer.cpp
laba4/: CMakeLists.txt
laba4/include/: Array.h  Figure.h  Point.h  Rectangle.h  Square.h  Triangle.h  functions.h
laba4/src/: main.cpp
laba4/tests/: test_figures.cpp  test_main.cpp
laba5/: .gitignore  CMakeLists.txt
laba5/include/: block_tracking_memory_resource.h  dynamic_array.h
laba5/src/: block_tracking_memory_resource.cpp  main.cpp
laba5/tests/: test_dynamic_array.cpp
laba6/: DockerFile
laba6/include/: battle_visitor.h  npc.h  npc_factory.h  observer.h
laba6/src/: battle_visitor.cpp  main.cpp  npc.cpp  npc_factory.cpp  observer.cpp  types.cpp
laba6/tests/: test_npc.cpp
laba7/: .gitignore
laba7/include/: battle_visitor.h  game_engine.h  npc.h  npc_factory.h  observer.h  types.h
laba7/src/: battle_visitor.cpp  game_engine.cpp  main.cpp  npc.cpp  npc_factory.cpp  observer.cpp  types.cpp
laba7/tests/: test_npc.cpp
